refactor(api): Now endpoints have a clean URL base
